# Hats-Chat

./: .gitignore  Cargo.toml  Icon.xcf  README.md  base.html  build.ps1  build.sh  default_profile.xcf  iconico.xcf  input.css  old_Icon.xcf  run.ps1  run.sh  tailwind.config.js  tailwind.sh  template.env  todo.md  watch.ps1  watch.sh
assets/: base.html  default_profile.avif  icon.avif  mockup.html  output.css
pages/: auth_template.html  index.html  landing_page.html  log-in.html  not_found.html
pages/partial/: log-in.html  sign-up.html
src/: main.rs
src/activate/: mod.rs
src/api/: mod.rs
src/api/account/: chage_profile_picture.rs  change_display_name.rs  mod.rs
src/api/auth/: login.rs  logout.rs  mod.rs  signup.rs
src/api/chat/: mod.rs
src/app/: find_friend.rs  friend_list.rs  mod.rs
src/app/account/: account_viewer.rs  mod.rs
src/data/: activated.rs  app_state.rs  chat.rs  mod.rs  user.rs  users.rs
src/utils/: auth_layer.rs  mod.rs  username.rs
templates/: account_viewer.html  base.html  editable_account.html  landing_page.html  not_found.html  unactivated.html
templates/auth/: base.html  log-in.html  sign-up.html
templates/components/: chat_message.html  chat_window.html  drop_down.html  find_friend_list.html  find_friend_modal.html  friends_list.html
templates/email/: confirmation_email.html
