[package]
name = "web-chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["multipart"] }
http = "0.2.9"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = { version = "0.1.37", features = ["log-always"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "time"] }
dotenvy = "0.15.7"
anyhow = "1.0.72"
email_address = "0.2.4"
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.26", features = ["serde"] }
tower-cookies = { version = "0.9.0", features = ["private"] }
cookie = "0.17.0"
dotenvy_macro = "0.15.7"
time = "0.3.23"
tokio-stream = { version = "0.1.14", features = ["full"] }
futures = "0.3.28"
async-stream = "0.3.5"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
hex = "0.4.3"
image = { version = "0.24.6", features = ["avif"] }
lettre = { version = "0.10.4", features = ["tokio1", "tracing", "tokio1-native-tls"] }

